--- a/public/home.html
+++ b/public/home.html
@@ -1,5 +1,17 @@
 <div class="homeHero container">
-	<div>Application developer &amp; interface designer</div>
+<!-- 	<div class="row"> -->
+		<div class="homeHeroContent center-block">
+			<div class="heroHeader display-1 text-uppercase">Developer &amp; UI/UX Designer</div> 
+			<div class="heroSubheader display-1">Passionate about writing clean, reusabled, testable code and designing sexy interfaces to go along with it.</div>
+			<!-- <div class="heroFooter">I enjoy writing clean, reusabled, testable code and designing sexy interfaces to go along with it.</div> -->
+			<!-- Based in Macon, Ga -->
+			<ul class="socialLinkList list-inline m-t-lg m-r text-center">
+				<li><span class="fa fa-facebook"></span></li>
+				<li><span class="fa fa-twitter"></span></li>
+				<li><span class="fa fa-linkedin"></span></li>
+			</ul>
+		</div>
+	<!-- </div> -->
 </div>
 <div class="skills container">
 	<!-- <div class="row">
@@ -21,7 +33,7 @@
 			</div>
 		</div>
 	</div> -->
-	<div class="row">
+	<!-- <div class="row">
 		<h3>Development</h3>
 		<div class="col-sm-4">
 			<canvas id="myChart" width="300" height="300"></canvas>
@@ -197,6 +209,6 @@
 				<li>Secret clearance and CMMI level 5</li>
 			</ul
 		</div>
-	</div>
+	</div> -->
 	
 </div>
