--- a/public/home.html
+++ b/public/home.html
@@ -1,6 +1,9 @@
+
+<div class="home">
 <div class="homeHero container">
 <!-- 	<div class="row"> -->
 		<div class="homeHeroContent center-block">
+			<span class="heroName display-1 text-uppercase">Nate Chapman</span>
 			<div class="heroHeader display-1 text-uppercase">Developer &amp; UI/UX Designer</div> 
 			<div class="heroSubheader display-1">Passionate about writing clean, reusabled, testable code and designing sexy interfaces to go along with it.</div>
 			<!-- <div class="heroFooter">I enjoy writing clean, reusabled, testable code and designing sexy interfaces to go along with it.</div> -->
@@ -13,8 +16,8 @@
 		</div>
 	<!-- </div> -->
 </div>
-<div class="skills container">
-	<!-- <div class="row">
+<!-- <div class="skills container">
+	<div class="row">
 		<div class="col-sm-4">
 			<h2>Passions &amp; Hobbies</h2>
 			<div class="hobbies ow">
@@ -209,6 +212,7 @@
 				<li>Secret clearance and CMMI level 5</li>
 			</ul
 		</div>
-	</div> -->
+	</div> 
 	
+</div>-->
 </div>
