--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,6 @@
 ﻿<!DOCTYPE html>
 
-<html lang="en" ng-app="main">
+<html lang="en" ng-app="app">
 <head>
     <!-- Required meta tags always come first -->
     <meta charset="utf-8">
@@ -15,11 +15,11 @@
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,800' rel='stylesheet' type='text/css' />
     <link rel="stylesheet" href="lib/font-awesome/css/font-awesome.min.css">
     <link href="css/bootstrap.css" rel="stylesheet" />
-    <link href="css/site.css" rel="stylesheet" />
+    <link href="css/natechapmanwebsite.css" rel="stylesheet" />
 </head>
 
 <body>
-	<div class="siteContainer">
+	<div ng-class="{backgroundFade: true}" class="siteContainer">
 		<div class="siteHeader container-fluid">
 			<!-- <ul class="socialLinkList list-inline pull-right m-t m-r">
 				<li><span class="fa fa-facebook"></span></li>
@@ -27,7 +27,7 @@
 				<li><span class="fa fa-linkedin"></span></li>
 			</ul> -->
 	    	<h1 class="logo pull-left">
-	    		Nate Chapman
+	    		<!-- Nate Chapman -->
 	    		<!-- <span>Application developer &amp; interface designer</span> -->
 	    	</h1>
 	    	<!-- <ul class="mainNav nav nav-pills pull-left">
@@ -46,7 +46,7 @@
 			</ul> -->
 	    </div>
 
-	    <div ng-view class="container">
+	    <div ng-view class="pageView container">
 	    </div>
     </div>
 
@@ -54,11 +54,8 @@
     <script src="lib/bootstrap/js/bootstrap.js"></script>
     <script src="lib/angular/angular.js"></script>
     <script src="lib/angular-route/angular-route.js"></script>
+    <script src="lib/angular-animate/angular-animate.js"></script>
     <script src="lib/Chart.js/Chart.js"></script>
-    <script src="js/app.js"></script>
-    <script src="js/services/login.js"></script>
-    <script src="js/controllers/home.js"></script>
-    <script src="js/controllers/about.js"></script>
-    <script src="js/controllers/contact.js"></script>
+    <script src="js/natechapmanwebsite.js"></script>
 </body>
 </html>
