--- a/public/home.html
+++ b/public/home.html
@@ -1,21 +1,28 @@
 
-<div class="home">
-<div class="homeHero container">
-<!-- 	<div class="row"> -->
+<div>
+	<div class="homeHero container">
 		<div class="homeHeroContent center-block">
 			<span class="heroName display-1 text-uppercase">Nate Chapman</span>
 			<div class="heroHeader display-1 text-uppercase">Developer &amp; UI/UX Designer</div> 
 			<div class="heroSubheader display-1">Passionate about writing clean, reusabled, testable code and designing sexy interfaces to go along with it.</div>
-			<!-- <div class="heroFooter">I enjoy writing clean, reusabled, testable code and designing sexy interfaces to go along with it.</div> -->
-			<!-- Based in Macon, Ga -->
-			<ul class="socialLinkList list-inline m-t-lg m-r text-center">
+			<ul class="homeMenu list-inline m-t-lg text-center">
+				<li class="nav-item">
+					<a href="/about" class="nav-link">About</a>
+				</li>
+				<li class="nav-item">
+					<a href="#" class="nav-link disabled">Blog</a>
+				</li>
+				<li class="nav-item">
+					<a href="/contact" class="nav-link">Contact</a>
+				</li>
+			</ul>
+			<ul class="socialLinkList list-inline m-t-lg text-center">
 				<li><span class="fa fa-facebook"></span></li>
 				<li><span class="fa fa-twitter"></span></li>
 				<li><span class="fa fa-linkedin"></span></li>
 			</ul>
 		</div>
-	<!-- </div> -->
-</div>
+	</div>
 <!-- <div class="skills container">
 	<div class="row">
 		<div class="col-sm-4">
